--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 requires-python = ">=3.9"
 name = "minimal-pba-cli"
-version = "0.0.3"
+version = "0.0.4"
 description = "A minimal command-line interface using plugin-based architecture"
 authors = [
     { name = "Dane Hillard", email = "github@danehillard.com" }
@@ -21,8 +21,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "License :: OSI Approved :: MIT License",
 ]
+license = "MIT"
+dynamic = ["readme"]
 dependencies = [
     "packaging>=24.2",
     "requests>=2.32.3",
